// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<styled.nav>
  <styled.div>
    <Styled(Link)
      to="/sale"
    >
      Promocje
    </Styled(Link)>
    <Styled(Link)
      key="/categories/home-spa"
      to="/categories/home-spa"
    >
      Domowe SPA
    </Styled(Link)>
    <Styled(Link)
      key="/categories/cleaning"
      to="/categories/cleaning"
    >
      Oczyszczanie
    </Styled(Link)>
    <Styled(Link)
      key="/categories/care"
      to="/categories/care"
    >
      Pielęgnacja
    </Styled(Link)>
  </styled.div>
  <styled.form
    onSubmit={[Function]}
  >
    <styled.input
      onChange={[Function]}
      placeholder="znajdź produkt"
      type="text"
      value=""
    />
    <styled.button
      type="submit"
    >
      Szukaj
    </styled.button>
  </styled.form>
</styled.nav>
`;

exports[`should submit form correctly 1`] = `
<Navigation
  categories={
    Array [
      Object {
        "description": "Profesjonalne SPA w domowym zaciszu to relaks dla ciała i duszy",
        "id": "1",
        "name": "Domowe SPA",
        "type": "homeSpa",
        "url": "/categories/home-spa",
      },
      Object {
        "description": "Oczyszczanie to podstawowy krok w dojściu do pięknej cery",
        "id": "2",
        "name": "Oczyszczanie",
        "type": "cleaning",
        "url": "/categories/cleaning",
      },
      Object {
        "description": "Należy przestrzegać codziennej pielęgnacji twarzy",
        "id": "3",
        "name": "Pielęgnacja",
        "type": "care",
        "url": "/categories/care",
      },
    ]
  }
  history={
    Object {
      "push": [MockFunction],
    }
  }
>
  <styled.nav>
    <nav
      className="sc-bdvvaa gmoOLK"
    >
      <styled.div>
        <div
          className="sc-gsDJrp hSAGZl"
        >
          <Styled(Link)
            to="/sale"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/sale"
            >
              Link
            </Link>
          </Styled(Link)>
          <Styled(Link)
            key="/categories/home-spa"
            to="/categories/home-spa"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/categories/home-spa"
            >
              Link
            </Link>
          </Styled(Link)>
          <Styled(Link)
            key="/categories/cleaning"
            to="/categories/cleaning"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/categories/cleaning"
            >
              Link
            </Link>
          </Styled(Link)>
          <Styled(Link)
            key="/categories/care"
            to="/categories/care"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/categories/care"
            >
              Link
            </Link>
          </Styled(Link)>
        </div>
      </styled.div>
      <styled.form
        onSubmit={[Function]}
      >
        <form
          className="sc-hKwCoD hfobKK"
          onSubmit={[Function]}
        >
          <styled.input
            onChange={[Function]}
            placeholder="znajdź produkt"
            type="text"
            value="Hello"
          >
            <input
              className="sc-eCImvq"
              onChange={[Function]}
              placeholder="znajdź produkt"
              type="text"
              value="Hello"
            />
          </styled.input>
          <styled.button
            type="submit"
          >
            <button
              className="sc-jRQAMF"
              type="submit"
            >
              Szukaj
            </button>
          </styled.button>
        </form>
      </styled.form>
    </nav>
  </styled.nav>
</Navigation>
`;

exports[`should submit form correctly 2`] = `
<Navigation
  categories={
    Array [
      Object {
        "description": "Profesjonalne SPA w domowym zaciszu to relaks dla ciała i duszy",
        "id": "1",
        "name": "Domowe SPA",
        "type": "homeSpa",
        "url": "/categories/home-spa",
      },
      Object {
        "description": "Oczyszczanie to podstawowy krok w dojściu do pięknej cery",
        "id": "2",
        "name": "Oczyszczanie",
        "type": "cleaning",
        "url": "/categories/cleaning",
      },
      Object {
        "description": "Należy przestrzegać codziennej pielęgnacji twarzy",
        "id": "3",
        "name": "Pielęgnacja",
        "type": "care",
        "url": "/categories/care",
      },
    ]
  }
  history={
    Object {
      "push": [MockFunction] {
        "calls": Array [
          Array [
            "/search?q=Hello",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
>
  <styled.nav>
    <nav
      className="sc-bdvvaa gmoOLK"
    >
      <styled.div>
        <div
          className="sc-gsDJrp hSAGZl"
        >
          <Styled(Link)
            to="/sale"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/sale"
            >
              Link
            </Link>
          </Styled(Link)>
          <Styled(Link)
            key="/categories/home-spa"
            to="/categories/home-spa"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/categories/home-spa"
            >
              Link
            </Link>
          </Styled(Link)>
          <Styled(Link)
            key="/categories/cleaning"
            to="/categories/cleaning"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/categories/cleaning"
            >
              Link
            </Link>
          </Styled(Link)>
          <Styled(Link)
            key="/categories/care"
            to="/categories/care"
          >
            <Link
              className="sc-dkPtyc XNpxy"
              to="/categories/care"
            >
              Link
            </Link>
          </Styled(Link)>
        </div>
      </styled.div>
      <styled.form
        onSubmit={[Function]}
      >
        <form
          className="sc-hKwCoD hfobKK"
          onSubmit={[Function]}
        >
          <styled.input
            onChange={[Function]}
            placeholder="znajdź produkt"
            type="text"
            value=""
          >
            <input
              className="sc-eCImvq"
              onChange={[Function]}
              placeholder="znajdź produkt"
              type="text"
              value=""
            />
          </styled.input>
          <styled.button
            type="submit"
          >
            <button
              className="sc-jRQAMF"
              type="submit"
            >
              Szukaj
            </button>
          </styled.button>
        </form>
      </styled.form>
    </nav>
  </styled.nav>
</Navigation>
`;
